<resources>
    <string name="app_name">AFC</string>
    <string name="employee_id">Employee ID</string>
    <string name="full_name">Full Name</string>
    <string name="national_id">National ID</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="job">Job</string>
    <string name="address">Address</string>
    <string name="salary">salary</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="membership_id">Member ID</string>
    <string name="date_of_membership">Date of Membership</string>
    <string name="date_of_expiry">Date of Expiry</string>
    <string name="club_name">AFC</string>
    <string name="input_type">Input Type</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">user name</string>
    <string name="age">age</string>
    <string name="get_a_ticket">Get a Ticket</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="date_of_start">Date Of Start</string>
    <string name="number_of_visitor">Number Of Visitor</string>
</resources>
