<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".visOp.newVistor">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/club_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="4dp"
            android:textColor="#fff"/>
    </android.support.v7.widget.Toolbar>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <android.support.design.widget.TextInputEditText
            android:inputType="number"
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="16sp"/>
    <RadioGroup
        android:id="@+id/gender"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/male"
            android:text="@string/male"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/female"
            android:text="@string/female"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <Button
        android:id="@+id/getticket"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="10dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#fff"
        android:text="@string/get_a_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"/>
    <ImageView
        android:id="@+id/ticketcode"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="250dp" />
</LinearLayout>